--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
-    "nanoid": "^3.3.7",
-    "unique-string": "^3.0.0"
+    "nanoid": "^3.3.7"
   }
 }
