--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,1 +1,1 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api",  "methods":["GET","POST","PUT","PATCH","DELETE","OPTIONS"] }] }
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api"}] }
