--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,1 +1,4 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api"}] }
+{ "version": 2, 
+  "rewrites": [{ "source": "/(.*)", "destination": "/api"}] ,
+  "routes":[{ "methods":["GET","POST","PUT","PATCH","DELETE","OPTIONS"}] 
+}
