--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,3 +1,3 @@
 { "version": 2, 
-  "routes":[{ "src": "/(.*)", "dest": "/api", "methods":["GET","POST","PUT","PATCH","DELETE","OPTIONS"]}] 
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
